tests/baselines/reference/functionCalls.errors.txt
==== tests/cases/compiler/functionCalls.ts (9 errors) ====
    
    // Invoke function call on value of type 'any' with no type arguments
    var anyVar: any;
    anyVar(0);
    anyVar('');
    
    // Invoke function call on value of type 'any' with type arguments
    // These should be errors
    anyVar<string>('hello');
    ~~~~~~
!!! functionCalls.ts(9,1): error TS2158: Untyped function calls may not accept type arguments.
    anyVar<number>();
    ~~~~~~
!!! functionCalls.ts(10,1): error TS2158: Untyped function calls may not accept type arguments.
    anyVar<Window>(undefined);
    ~~~~~~
!!! functionCalls.ts(11,1): error TS2158: Untyped function calls may not accept type arguments.
    
    
    // Invoke function call on value of a subtype of Function with no call signatures with no type arguments
    interface SubFunc extends Function {
        prop: number;
    }
    var subFunc: SubFunc;
    subFunc(0);
    subFunc('');
    subFunc();
    
    
    // Invoke function call on value of a subtype of Function with no call signatures with type arguments
    // These should be errors
    subFunc<number>(0);
    ~~~~~~~
!!! functionCalls.ts(26,1): error TS2159: Non-generic functions may not accept type arguments.
    subFunc<string>('');
    ~~~~~~~
!!! functionCalls.ts(27,1): error TS2159: Non-generic functions may not accept type arguments.
    subFunc<any>();
    ~~~~~~~
!!! functionCalls.ts(28,1): error TS2159: Non-generic functions may not accept type arguments.
    
    // Invoke function call on value of type Function with no call signatures with type arguments
    // These should be errors
    var func: Function;
    func<number>(0);
    ~~~~
!!! functionCalls.ts(33,1): error TS2159: Non-generic functions may not accept type arguments.
    func<string>('');
    ~~~~
!!! functionCalls.ts(34,1): error TS2159: Non-generic functions may not accept type arguments.
    func<any>();
    ~~~~
!!! functionCalls.ts(35,1): error TS2159: Non-generic functions may not accept type arguments.
    